--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -1,5 +1,5 @@
-@import '../../assets/scss/variables';
-@import '../../assets/scss/mixins';
+@import "../../assets/scss/variables";
+@import "../../assets/scss/mixins";
 
 .page {
   @include margin-bottom(2);
@@ -17,11 +17,11 @@
   }
 
   &__body {
+    position: relative;
     font-size: $typographic-base-font-size;
     @include line-height(1);
     @include margin(0, 0, 1);
   }
-
 }
 
 @include breakpoint-sm {
@@ -31,9 +31,7 @@
     &__inner {
       padding: 30px 20px;
     }
-
   }
-
 }
 
 @include breakpoint-md {
@@ -43,7 +41,5 @@
     &__inner {
       padding: 40px 35px;
     }
-
   }
-
 }
