--- a/src/components/Sidebar/Menu/Menu.module.scss
+++ b/src/components/Sidebar/Menu/Menu.module.scss
@@ -1,5 +1,5 @@
-@import '../../../assets/scss/variables';
-@import '../../../assets/scss/mixins';
+@import "../../../assets/scss/variables";
+@import "../../../assets/scss/mixins";
 
 .menu {
   @include margin-bottom(1);
@@ -26,14 +26,10 @@
         }
 
         &--active {
-          color: $color-base;
-          border-bottom: 1px solid $color-base;
+          color: $color-primary;
+          border-bottom: 1px solid $color-primary;
         }
-
       }
-
     }
-
   }
-
 }
