--- a/src/components/Sidebar/Switcher/Switcher.module.scss
+++ b/src/components/Sidebar/Switcher/Switcher.module.scss
@@ -9,7 +9,7 @@
   height: 30px;
 
   &__text {
-    // margin-right: 10px;
+    margin-right: 10px;
   }
 
   &__container {
@@ -24,6 +24,9 @@
   display: flex;
   flex: 1;
   justify-content: space-between;
+  position: absolute;
+  right: 0;
+  align-items: flex-end;
 }
 .switch__text {
   font-size: 16px;
